FCS-452: Regulator task list implementation (#232)